// Copyright (C) 2018 ContentBox authors
//
// This file is part of the go-contentbox library.
//
// the go-contentbox library is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// the go-contentbox library is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with the go-contentbox library.  If not, see <http://www.gnu.org/licenses/>.
//

syntax = "proto3";

package p2ppb;

message MessageHeader {
    uint32 magic = 1;
    uint32 code = 2;
    uint32 data_length = 3;
    uint32 checksum = 5;
    uint32 data_checksum = 6;
}